--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -778,7 +778,7 @@
         gap: 20px !important;
         margin-top: 0 !important;
         margin-bottom: 30px !important;
-        width: 250px !important;
+        width: 280px !important;
         max-width: 100% !important;
     }
 
